--- a/default/commands-economy.yml
+++ b/default/commands-economy.yml
@@ -66,3 +66,7 @@ commands:
       dailyLinkBuySonhos: "Psiu, você está querendo mais sonhos para conseguir ostentar todos os sonhos que você tem? Então compre sonhos na minha loja de sonhos! {0}"
       pleaseWait: "Você já pegou seus Sonhos Diários hoje! Você poderá pegar novamente {0}!"
       pleaseWaitBuySonhos: "Psiu, se você não quer esperar para conseguir mais sonhos... Então compre sonhos na minha loja de sonhos! {0}"
+    sonhostop:
+      description: "Veja as pessoas mais ricas de sonhos da LorittaLand"
+    sonhostoplocal:
+      description: "Veja se você está convivendo com pessoas cheias de sonhos no seu servidor"
