--- a/default/modules-section-names.yml
+++ b/default/modules-section-names.yml
@@ -19,5 +19,5 @@ modules:
     premiumKeys: "Premium Keys"
     customBadge: "Emblema Personalizado"
     dailyMultiplier: "Multiplicador de Sonhos"
-    customCommands: "Comandos em JavaScript"
+    customCommands: "Comandos Personalizados"
     twitter: "Twitter"
