--- a/default/guidelines.yml
+++ b/default/guidelines.yml
@@ -28,6 +28,7 @@ website:
         - "Tentar evadir/burlar punições. Caso você tente fazer isto, você será punido novamente, sem chance de ser desbanido."
         - "Plagiar a Loritta. Você pode se inspirar em funcionalidades dela, mas copiar quase identicamente ela é proibido."
         - "Pedir devolução de dinheiro após comprar algo relacionado a Loritta. Todos os pagamentos não são reembolsáveis pois são produtos virtuais. Se você precisa de suporte com algo relacionado a algum produto recomendamos que você primeiro entre em contato no nosso servidor de suporte."
+        - "Vender sonhos ou outras coisas relacionadas a Loritta por dinheiro real ou por outras coisas com valores monetários reais. Se te oferecerem não aceite e reporte para a equipe da Loritta, pois se você aceitar você irá correr o risco de ser punido e ainda por cima pode levar um golpe."
       onPlatformBreak:
         - "Caso você encontre alguma pessoa que está desrespeitando as diretrizes da plataforma, reporte para a equipe da plataforma e, caso aplicável, reporte para a equipe da Loritta."
       disrespect:
