--- a/default/commands-economy.yml
+++ b/default/commands-economy.yml
@@ -50,7 +50,7 @@ commands:
       - "Depois dessa você vai ter que dormir para conseguir mais sonhos rsrs... entendeu a piada? hein?"
       - "Eu também amo sonhos, mas mesmo assim não sou Robin Hood para ficar distribuindo meu dinheiro"
       - "Não tenho inveja desses sonhos, se eu quisesse eu poderia dar a mesma quantidade para mim!"
-      clickToAcceptTheTransaction: "Clique em {0} para aceitar a transação!"
+      clickToAcceptTheTransaction: "Para confirmar a transação, você e {0} devem clicar em {1}!"
     flipcoinbet:
       description: "O clássico \"Gire uma moeda e veja se irá cair cara ou coroa!\", mas agora envolvendo sonhos! Não me responsabilizo se você perder tudo em apostas"
       startBet: "{0}, {1} quer fazer uma aposta com você! Cada um irá pagar **{5} sonhos ({6} sonhos de taxa para jogar rs)**. Se cair **{2}**, você irá ganhar **{3} sonhos**, se cair **{4}**, {1} irá ganhar **{3} sonhos**! E aí, vai encarar?"
@@ -82,11 +82,13 @@ commands:
       - "**Você pode vender ações utilizando** `{1}`"
       - "**Para ver seu portfólio de ações, use** `{2}`"
       - ""
-      - "Tickers com {3} estão inativos pois a bolsa está fechada, você pode comprar/vender ações enquanto está fechada, mas o valor não irá mudar até a bolsa reabrir!"
+      - "Tickers com {3} estão inativos pois a bolsa está fechada, você apenas pode comprar/vender ações quando a ação está ativa!"
       buyExample: "{0}corretora comprar Ticker Quantidade"
       sellExample: "{0}corretora vender Ticker Quantidade"
       portfolioExample: "{0}corretora portfólio"
       invalidTickerId: "Ticker inexistente! Veja a lista de tickers que você pode comprar ações em `{0}`"
+      outOfSession: "Você não pode comprar ou vender ações que estão inativas! Você precisa esperar que ela esteja ativa para poder comprar ou vender!"
+      alreadyExecutingAction: "Você já tem uma ação pendente! Espere ela acabar para poder realizar outra ordem!"
       stocks:
         one: "ação"
         multiple: "ações"
@@ -100,6 +102,7 @@ commands:
       description: "Venda ações por sonhos da Loritta"
       zeroValue: "Wow, que legal! Você vai vender *nenhuma* ação, impressionante!"
       notEnoughStocks: "Você não tem ações suficientes de `{0}` para vender!"
+      boughtStocksWhileSelling: "Você comprou ou vendeu ações deste ticker enquanto esta ação estava pendente! Tente novamente e desculpe pela inconveniência!"
       successfullySold: "Você vendeu **{0} {1}** de `{2}`! {3}"
       successfullySoldProfit: "Com a venda, você **ganhou {0} sonhos (lucro de {1} sonhos)**!"
       successfullySoldLoss: "Com a venda, você **perdeu {0} sonhos (perda de {1} sonhos)**! Nem todos os dias a gente sai ganhando... Sempre fique de olho no `{1}` para saber se vale a pena vender!"
