--- a/default/commands-moderation.yml
+++ b/default/commands-moderation.yml
@@ -49,6 +49,7 @@ commands:
       noWarnsFound: "O usuário não possui nenhum aviso para você remover! Psiu, sabia que você pode ver a lista de avisos de um usuário com {0}?"
       notEnoughWarns: "O usuário tem menos que **{0}** avisos! Psiu, sabia que você pode ver a lista de avisos de um usuário com {1}?"
       warnRemoved: "Prontinho, o usuário teve um aviso removido! Que tal ele ler as regras do servidor antes que ele tenha que ser punido de novo?"
+      allWarnsRemoved: "Prontinho, todos os avisos do usuário foram removidos! Que tal ele ler as regras do servidor antes que ele tenha que ser punido de novo?"
     warnlist:
       description: "Mostra os avisos que um usuário possui"
       common: "Aviso"
