--- a/default/website-donate.yml
+++ b/default/website-donate.yml
@@ -9,7 +9,10 @@ website:
     - "Se você quer que eu continue online, então por favor, do fundo do meu coração... <b>doe</b>, não importa se você irá doar apenas R$1, toda doação é bem-vinda e, é claro, você será uma pessoa maravilhosa (com muita fama e glória!)."
     - "Ah, e é claro: Doar é <i>opcional</i>, então não se sinta mal se você não puder doar!"
     donateNow: "Doar Agora!"
+    viewPlans: "Ver os Planos!"
+    renewPlan: "Renovar Plano"
     donationBenefits: "Benefícios ao Doar"
+    donateWithoutAnyRewards: "Não tem dinheiro suficiente mas ainda assim quer ajudar a Loritta, mesmo que não receba nada em troca?"
     benefitsExplain: "Para agradecer a sua doação, nós temos algumas vantagens para você! Cada benefício dura por um mês após a sua doação."
     benefitsSponsor: "Querendo crescer o seu servidor e ainda por cima ganhar as vantagens de doador da Loritta? Então veja as vantagens de virar um patrocinador, você ganha todas as vantagens e ainda por cima ganha divulgação em um dos bots mais fofos do Discord!"
     activeDonators: "Pagadores de Aluguel"
