--- a/en-us/translators.yml
+++ b/en-us/translators.yml
@@ -1,4 +1,5 @@
----
 loritta:
   translationAuthors:
-    - "297153970613387264"
+    - "123170274651668480" # MrPowerGamerBR
+    - "272031079001620490" # Nightdavisao
+    - "216586322788352010" # MystAnorak
