--- a/default/website-donate.yml
+++ b/default/website-donate.yml
@@ -11,6 +11,7 @@ website:
     donateNow: "Doar Agora!"
     viewPlans: "Ver os Planos!"
     renewPlan: "Renovar Plano"
+    buyPlan: "Comprar Plano"
     donationBenefits: "Benefícios ao Doar"
     donateWithoutAnyRewards: "Não tem dinheiro suficiente mas ainda assim quer ajudar a Loritta, mesmo que não receba nada em troca?"
     benefitsExplain: "Para agradecer a sua doação, nós temos algumas vantagens para você! Cada benefício dura por um mês após a sua doação."
@@ -19,3 +20,23 @@ website:
     inactiveDonators: "Doadores Inativos"
     thanksToEveryone: "Obrigada a todos que me ajudaram!"
     areYouGoingToDonate: "Ownt, você irá doar? :3"
+    topDonatorsOnThisMonth: "Ostentadores deste Mês"
+    topDonatorsLifetime: "Ostentadores Vitalícios"
+    rewards:
+      disableAds: "Lori irá parar de perturbar você e os membros do seu servidor com pedidos de doação"
+      exclusiveProfileBadge: "Badge EXCLUSIVA no \"+perfil\" para os membros do seu servidor"
+      customProfileBackground: "Faça seu PRÓPRIO background para o \"+perfil\""
+      reducedCooldown: "Tempo reduzido entre comandos"
+      everyMinuteSonhos: "Sonhos ganhos a cada minuto"
+      dailyMultiplier: "Multiplicador de dailies de sonhos para membros do seu servidor"
+      maxLevelUpRoles: "Máximo de cargos de Level Up"
+      maxMemberCounters: "Número de Contadores de Membros"
+      maxSocialAccountsRelay: "Máximo de contas de notificações do YouTube/Twitch/Twitter"
+      maxDailyLimit: "Limite máximo de sonhos no \"+daily\""
+      giveBackRepChange: "Chance da Lori te dar uma reputação ao você dar uma reputação para outro usuário"
+      globalExperienceMultiplier: "Multiplicador de XP Global"
+    plans:
+      free: "Grátis"
+      essential: "Essencial"
+      recommended: "Recomendado"
+      complete: "Completo"
