--- a/en-us/translators.yml
+++ b/en-us/translators.yml
@@ -4,3 +4,4 @@ loritta:
     - "123170274651668480" # MrPowerGamerBR
     - "272031079001620490" # Nightdavisao
     - "216586322788352010" # MystAnorak
+    - "214486492909666305" # joaoesteves10
