--- a/default/commands-images.yml
+++ b/default/commands-images.yml
@@ -108,3 +108,5 @@ commands:
       description: "Crie um title card do Sonic Mania!"
     carlyaaah:
       description: "\"A gente perdeu o iCarly.com e alguém já comprou... a pessoa que comprou se chama \"Amanda Valdez\"\""
+    petpet:
+      description: "Faça cafuné em uma imagem"
