--- a/default/website-donate.yml
+++ b/default/website-donate.yml
@@ -1,25 +1,25 @@
 website:
   donate:
-    title: "Doar"
+    title: "Premium"
     needYourHelp: "Eu preciso da sua ajuda!"
     stayAwesome: "Eu quero continuar a ser incrível, mas eu preciso de dinheiro para me ajudar a ficar online!"
     introDonate:
     - "Você está vendo isto? É assim que eu me sinto quando eu estou sem dinheiro para pagar o meu aluguel."
     - "Para me manter online, é necessário gastar <b>mais de R$400 todos os meses</b>... e isto sem contar outros gastos usados para investir em novidades incríveis para que você possa usar!"
-    - "Se você quer que eu continue online, então por favor, do fundo do meu coração... <b>doe</b>, não importa se você irá doar apenas R$1, toda doação é bem-vinda e, é claro, você será uma pessoa maravilhosa (com muita fama e glória!)."
-    - "Ah, e é claro: Doar é <i>opcional</i>, então não se sinta mal se você não puder doar!"
-    donateNow: "Doar Agora!"
+    - "Se você quer que eu continue online, então que tal comprar premium? Toda compra de premium é bem-vinda e, é claro, você será uma pessoa maravilhosa (com muita fama e glória!)."
+    - "Ah, e é claro: Comprar premium é <i>opcional</i> e você pode continuar a usar a Loritta sem pagar absolutamente nada, então não se sinta mal se você não puder comprar!"
+    donateNow: "Comprar Agora!"
     viewPlans: "Ver os Planos!"
     renewPlan: "Renovar Plano"
     buyPlan: "Comprar Plano"
-    donationBenefits: "Benefícios ao Doar"
+    donationBenefits: "Benefícios Premium"
     donateWithoutAnyRewards: "Não tem dinheiro suficiente mas ainda assim quer ajudar a Loritta, mesmo que não receba nada em troca?"
     benefitsExplain: "Para agradecer a sua doação, nós temos algumas vantagens para você! Cada benefício dura por um mês após a sua doação."
     benefitsSponsor: "Querendo crescer o seu servidor e ainda por cima ganhar as vantagens de doador da Loritta? Então veja as vantagens de virar um patrocinador, você ganha todas as vantagens e ainda por cima ganha divulgação em um dos bots mais fofos do Discord!"
     activeDonators: "Pagadores de Aluguel"
     inactiveDonators: "Doadores Inativos"
     thanksToEveryone: "Obrigada a todos que me ajudaram!"
-    areYouGoingToDonate: "Ownt, você irá doar? :3"
+    areYouGoingToDonate: "Ownt, você irá comprar? :3"
     topDonatorsOnThisMonth: "Ostentadores deste Mês"
     topDonatorsLifetime: "Ostentadores Vitalícios"
     rewards:
@@ -40,3 +40,20 @@ website:
       essential: "Essencial"
       recommended: "Recomendado"
       complete: "Completo"
+    beforeBuyingTerms:
+      title: "Antes de comprar..."
+      youAgreeTo: "Ao comprar algo, você está concordando que:"
+      terms:
+      - "Nós não oferecemos reembolso para produtos vendidos, pois é um produto virtual."
+      - "Comprar algo no website não te garante imunidade a banimentos e também não irá retirar banimentos."
+      - "Você poderá ser banido caso peça reembolso após já ter recebido o produto."
+      - "Caso você tenha algum problema com os produtos, contate o suporte da Loritta para te ajudar!"
+      - "Tudo que é comprado não possui valor monetário fora da Loritta, vendas de terceiros não são responsabilidade da equipe da Loritta."
+      - "Que a Loritta é muito fofa :3"
+      agree: "Eu concordo"
+    mfaDisabled:
+      title: "Calma aí!"
+      close: "Fechar"
+      description:
+      - "Para a sua segurança, você precisa ativar a autenticação em duas etapas para a sua conta do Discord antes de poder comprar algo."
+      - "Após ativar, volte aqui para continuar a sua compra!"
