fix gramatical error: more stickier than

--- a/en-us/commands-fun.yml
+++ b/en-us/commands-fun.yml
@@ -65,7 +65,7 @@ commands:
       value80:
         - "😏 %ship% But these two have known each other for a long time... 😏"
         - "😊 %ship% Of course these two are a beautiful couple! 😊"
-        - "😜 %ship% Couple more stickier than Despacito?😜"
+        - "😜 %ship% A couple stickier than Despacito?😜"
         - "😄 %ship% If these two weren't dating I would be surprised! 😄"
       value70:
         - "🙂 %ship% I foresee a cute couple forming!🙂"
