fix translation error: "thanks" used like a verb
the sponsorship of also sounds kinda weird

--- a/en-us/website-daily.yml
+++ b/en-us/website-daily.yml
@@ -11,8 +11,8 @@ website:
     invalidReCaptcha: "invalid reCAPTCHA! Try reloading the page, switching browsers and, if you are using VPNs or proxies, disable before trying to get your reward!"
     congratulations: "Congratulations! Today you won..."
     youEarnedMoreSonhos: "You won x{0} more sonhos, thanks to..."
-    sponsoredStatus: "You would win {0} sonhos, but thanks to the sponsorship of {1} you won {2}!"
-    thankTheSponsor: "Thanks {0} for making you win {1} more sonhos than normal!"
+    sponsoredStatus: "You would win {0} sonhos, but thanks to {1}'s sponsorship you won {2}!"
+    thankTheSponsor: "Thank {0} for making you win {1} more sonhos than normal!"
     comeBackLater: "Come back later!"
     wantMoreSonhos: "Hey, do you want more sonhos to show off to other people? Then buy sonhos {0}!"
     clickingHere: "clicking here"
