--- a/default/commands-social.yml
+++ b/default/commands-social.yml
@@ -1,5 +1,15 @@
 commands:
   social:
+    level:
+      description: "Veja seu XP no servidor!"
+      usage: "<membro>"
+      thisCommandDoesNotWorkOnBots: "Este comando não funciona em bots como eu!"
+      title: "{0} **| Profile Card de `{1}`**"
+      currentLevel: "{0} **| Nível atual: `{1}`**"
+      currentXP: "{0} **| XP Atual:** `${1}`"
+      ranking: "{0} **| Colocação:** `#{1}`"
+      userNextLevelRequiredXp: "{0} **| XP necessário para o próximo nível ({1}):** `{2}`"
+      lorotasHint: "> {0} • **Dica da Lorota Jubinha:** continue conversando para passar de nível. Eu sei que você vai conseguir!"
     youAreNotMarried: "A tua alma ainda não encontrou outra alma para passar o resto da vida com ela... Você só pode usar funcionalidades de pessoas casados após se {0} com alguém! {1}"
     profile:
       profileshop: "Compre novos perfis em {0}"
